--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "connect-mongo": "~0.4.0",
         "passport": "~0.2.0",
         "passport-local": "~0.1.6",
-        "jade": "~1.2.0"
+        "jade": "~1.2.0" ,
+        "underscore": "~1.5.2"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
