--- a/.jshintrc
+++ b/.jshintrc
@@ -19,6 +19,13 @@
   "smarttabs": true,
   "globals": {
     "angular": false,
-    "routingConfig": false
+    "routingConfig": false,
+    /* MOCHA */
+    "describe"   : false,
+    "it"         : false,
+    "before"     : false,
+    "beforeEach" : false,
+    "after"      : false,
+    "afterEach"  : false
   }
 }
