Scheduler controller and new tests for scheduler
Add new controller for scheduler for use instead of addJob
(it had strange semantics...). Rewritten tests for scheduler.
Changed scheduler methods to return promises instead of
using callbacks in order to achieve clearer code.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
     "jade": "~1.2.0",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "mongoose-q": "0.0.10",
+    "q": "^1.0.1"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
