--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
     "jade": "~1.2.0",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "socket.io-client": "~0.9.16"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
