Add socket.io dependency

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "jade": "~1.2.0",
     "underscore": "~1.5.2",
     "mongoose-q": "0.0.10",
-    "q": "^1.0.1"
+    "q": "^1.0.1",
+    "socket.io": "~0.9.16",
+    "socket.io-client": "~0.9.16"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
