--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-cookies": "1.2.11",
     "angular-sanitize": "1.2.11",
     "angular-route": "1.2.11",
+    "angular-bootstrap": "",
     "angular-ui-router": "0.2.8-bowratic-tedium",
     "socket.io-client": "~0.9.16"
   },
